# Star-Orbit-Wars

./: .gitignore  README.md  pyproject.toml  submission.py
.claude/: settings.json
archive/: README.md  _inspect_notebook.py  bc_prototype.py  turbo_dashboard.py
docs/: BIG_PUSH.md  JAX_ENGINE_SPEC.md  KAGGLE_DATASET_BIG_AZ_BUG.md  MUZERO_SPEC.md  NN_DRIVEN_ROLLOUTS_SPEC.md  NN_VALUE_HEAD_DESIGN.md  PPO_DESIGN.md  STATUS.md  TOMORROW.md  V37_SESSION_FINDINGS.md
runs/: ab_exp3_vs_ucb_20.json  ab_exp3_vs_ucb_smoke.json  ax_002.json  az_iter1_smoke.json  az_v37.json  baseline_w2_defaults_20260424.json  bc_v_smoke.json  bc_v_v1.json  bc_v_v2_deep.json  bc_v_v3_postfix.json  bc_warmstart_small_cpu.json  bc_warmstart_small_cpu.pt  bc_warmstart_v2.json  bc_warmstart_v3.json  bc_warmstart_v3_small.json  bc_warmstart_v5_small.json  bundle_smoke.py  compare_smoke.json  compare_turbo_v2_vs_defaults.json  compare_v4_vs_v3.json  compare_v5_vs_v3.json  evotune_20260424_150716.jsonl  evotune_20260424_150716_best.py  evotune_20260424_150716_summary.json  evotune_20260424_153758.jsonl  evotune_20260424_153758_best.py  evotune_20260424_153758_summary.json  smoke.json  smoke_overage_bank.json  turbo_ax_w2_20260422.json  turbo_v2_20260424.json  turbo_v3_20260424.json  turbo_v4_20260425.json  turbo_v4_20260425b.json  turbo_v4_20260425c.json  turbo_v4_20260425d.json  turbo_v4_20260426.json  turbo_v5_w3pool.json  v11_1_smoke.py  weights_smoke.json
submissions/: README.md  heuristic_v1.py  heuristic_v5.py  mcts_v1.py  mcts_v2.py  mcts_v3.py  mcts_v4.py  mcts_v5.py  mcts_v6.py  mcts_v7.py  noop.py  noop_v0.py  v10_fast_m0p5_noopp.py  v11.py  v12_e1.py  v12_e2.py  v12_e5.py  v8.py  v9.py
tests/: test_archetypes.py  test_bayes.py  test_bc_augment.py  test_bokr_widen.py  test_bundle.py  test_evotune.py  test_evotune_bridge.py  test_fast_engine_isolation.py  test_fast_rollout.py  test_fitness_parallel.py  test_fitness_pools.py  test_gumbel_search.py  test_heuristic.py  test_intercept.py  test_intercept_vec.py  (+18 more)
(+203 files in other folders)
