[project]
name = "orbit-wars"
version = "0.1.0"
description = "Kaggle Orbit Wars bot — heuristic-first, search-amplified, learning-optional"
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.0",
  "jsonschema>=3.0.1",
  "pyjson5",
  "requests>=2.25.1",
]

[project.optional-dependencies]
# Kaggle CLI for submissions
kaggle = ["kaggle"]
# TuRBO tuning (Week 2)
turbo = ["ax-platform", "botorch", "torch"]
# PPO self-play (Week 4)
rl = ["torch"]
# JAX engine (Week 4)
jax = ["jax", "jaxlib"]
# Dev tooling
dev = ["pytest", "pytest-xdist", "black", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/orbitwars"]

[tool.pytest.ini_options]
# Register custom marks so `pytest.mark.slow` doesn't emit a
# PytestUnknownMarkWarning. Slow tests still run by default (they're
# measured in milliseconds in this suite); the mark is a semantic hint
# so a future `pytest -m "not slow"` can skip the real-game ones
# (e.g. `test_fitness_parallel` spins a 2-worker pool + plays real
# kaggle games — 10-30 s on Windows).
markers = [
  "slow: tests that spawn multiprocessing pools or play real Kaggle games (>5 s)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
